- Allow to format only one side on ddh files
- Allow to clear contents when formatting ("c/borrado" or "s/borrado") on ddh files

Improved Spectrum Next emulation:
- Fixed DMA burst mode when prescaler=0
- Fixed DMA Transfer restarting the byte count at the end of a transfer
- Added Layer modes 6 and 7 (blend modes)
- Added stackless NMI
- Fixed DIVMMC mapping after RETN
- Fixed esxdos call DISK_FILEMAP
- Fixed palette offset for layer 2
- Allow tiles on RAM 7

Improved Debug:
- CPU history: allow to change memory pointer to the PC register show in history
- CPU history: allow to see full history
- Show when CPU is in wait state
- Dissassemble numeric parameters on Z80N (Z80 Spectrum Next) opcodes (NEXTREG NN,A, TEST N, etc)
- Added breakpoint action save-binary
- Allow to enable/disable breakpoint at an adress (not just enable/remove), using key 'L' uppercase. Disabled state is saved on configuration
- Added Symbol Table loading

Improved Hexadecimal editor:
- Now the data is refreshed when the window has the focus too
- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Allow keys Home/End on windows
- Video layers window can now be backgrounded
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default
- Now rainbow bars on windows title are visible on all GUI Styles when an error or splash message appears
- Added a direct function to open Breakpoints window

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently